# TrashVision

./: README.md  pyproject.toml
hardware/Arduino/: ardser.ino
hardware/ESP32 CAM/CameraWebServer/: CameraWebServer.ino
hardware/ESP32 CAM/esp32cam/: myesp.ino
machinelearning/: README.md
machinelearning/autoencoder/: ae_test_ds.csv  ae_train_ds.csv  ae_training.ipynb  autoencoder_weights.hdf5  decoder_model.h5  encoder_model.h5
machinelearning/classifier/: detect.py
machinelearning/classifier/adam_0.0005_dropout/: test_d.csv  train_d.csv  trashvision-clsfr.ipynb
machinelearning/classifier/adam_0.0005_dropout_negcls/: test_d.csv  train_d.csv  trashvision-clsfr.ipynb
machinelearning/classifier/adam_0.001/: test.csv  train.csv  trashvision-clsfr.ipynb
software/: README.md  swa.d2
software/database/: data.py
software/server/: server.py
